test/src/e2e_vm_tests/test_programs/should_pass/test_abis/abi_with_associated_constant/src/main.sw
library;

abi A {
    const ID: u32;
}
