test/src/e2e_vm_tests/test_programs/should_fail/abi_associated_const_missing_expr/src/main.sw
library;

abi ConstantId {
    const ID: u64;
}

impl ConstantId for Contract { const ID: u64; }
